<resources>

    <string name="nav_item_add_shift">Add Shift</string>
    <string name="nav_item_stats_view">Statistics</string>
    <string name="nav_item_month_view">Month</string>
    <string name="nav_item_week_view">Week</string>
    <string name="nav_item_send_feedback">Send Feedback</string>
    <string name="nav_item_rate">Rate</string>
    <string name="nav_item_settings">Settings</string>
    <string name="add_shift_hint_title">Enter title...</string>
    <string name="add_shift_hint_overtime_switch">Overtime</string>
    <string name="add_shift_hint_pay_rate">Pay Rate ($ / hr)</string>
    <string name="add_shift_hint_overtime_pay_rate">Overtime Pay Rate ($ / hr)</string>
    <string name="add_shift_hint_unpaid_break">Unpaid Break (mins)</string>
    <string name="add_shift_hint_notes">Notes...</string>
    <string name="add_shift_hint_save_as_template">Save as template</string>
    <string name="save">Save</string>

    <string name="settings_cat_title_about">About</string>
    <string name="settings_cat_key_about">settings_cat_key_about</string>
    <string name="settings_cat_title_defaults">Defaults</string>
    <string name="settings_cat_key_defaults">settings_cat_key_defaults</string>
    <string name="settings_cat_title_content">Content</string>
    <string name="settings_cat_key_content">settings_cat_key_content</string>

    <string name="settings_key_view_full_version">settings_key_view_full_version</string>
    <string name="settings_key_start_day">settings_key_start_day</string>
    <string name="settings_key_export_data">settings_key_export_data</string>
    <string name="settings_key_default_start_time">settings_key_default_start_time</string>
    <string name="settings_key_default_end_time">settings_key_default_end_time</string>
    <string name="settings_key_default_break_duration">settings_key_default_break_duration</string>
    <string name="settings_key_default_pay_rate">settings_key_default_pay_rate</string>
    <string name="settings_key_default_reminder">settings_key_default_reminder</string>
    <string name="settings_key_app_version">settings_key_app_version</string>
    <string name="settings_key_build_info">settings_key_build_info</string>
    <string name="settings_key_rate">settings_key_rate</string>
    <string name="settings_key_support">settings_key_support</string>
    <string name="settings_key_licenses">settings_key_licenses</string>

    <string name="settings_title_view_full_version">Get full version of Shift Tracker</string>
    <string name="settings_title_start_day">First day of the week</string>
    <string name="settings_title_export_data">Export shifts</string>
    <string name="settings_title_default_start_time">Default start time</string>
    <string name="settings_title_default_end_time">Default end time</string>
    <string name="settings_title_default_break_duration">Default unpaid break duration</string>
    <string name="settings_title_default_pay_rate">Default pay rate</string>
    <string name="settings_title_default_reminder">Default reminder</string>
    <string name="settings_title_app_version">App version</string>
    <string name="settings_title_build_info">Build info</string>
    <string name="settings_title_rate">Rate app</string>
    <string name="settings_title_support">Support</string>
    <string name="settings_title_licenses">Licenses</string>

    <string name="settings_summary_start_day">The first day of your week</string>
    <string name="settings_summary_export_data">Export all your data to a csv file</string>
    <string name="settings_summary_default_start_time">The default start time to use when creating a new shift</string>
    <string name="settings_summary_default_end_time">The default end time to use when creating a new shift</string>
    <string name="settings_summary_default_break_duration">Default duration for unpaid breaks</string>
    <string name="settings_summary_default_pay_rate">Default pay rate ($/hour)</string>
    <string name="settings_summary_default_reminder">Default reminder for new shifts</string>
    <string name="settings_summary_rate">If you like the app, please leave a rating in Google Play</string>
    <string name="settings_summary_support">Email support with feedback or requests</string>
    <string name="settings_summary_licenses">Libraries used to create this app</string>
    <string name="settings_summary_build_info">Build Time: %1$s. Git Sha: %2$s</string>
    <string name="month_fragment_title_template">Shifts on %1$s</string>
    <string name="no_shifts">No shifts</string>
    <string name="no_upcoming_shifts">No upcoming shifts</string>

    <string name="view_shift_break_duration_template">%1$s unpaid break</string>
    <string name="view_shift_pay_rate_template">%1$s per hour</string>
    <string name="view_shift_overtime_title">Overtime:</string>
    <string name="view_shift_total_pay_label">Total earnings:</string>

    <string name="default_shift_title">My Shift</string>
    <string name="reminder_notification_title">Upcoming shift</string>
    <string name="reminder_notification_title_template">Upcoming shift: %1$s</string>
    <string name="reminder_notification_content_template">You shift starts %1$s</string>
    <string name="now">now</string>
    <string name="shift_context_menu_delete">Delete</string>
    <string name="shift_context_menu_copy">Make copy</string>
    <string name="shift_context_menu_export">Export to calendar</string>

    <string name="error_saving_shift">Error saving shift</string>
    <string name="error_deleting_shift">Error deleting shift</string>
    <string name="error_time_is_invalid">Invalid shift times entered</string>
    <string name="error_overtimetime_is_invalid">Invalid shift overtime entered</string>
    <string name="error_invalid_pay_rate">Invalid pay rate entered</string>
    <string name="error_exporting_data">Error exporting data</string>

    <string name="edit_shift_edit_warning_dialog_title">Are you sure?</string>
    <string name="edit_shift_edit_warning_dialog_message">Any information you\'ve added will be lost</string>
    <string name="edit_shift_edit_warning_dialog_positive_button">Keep editing</string>
    <string name="edit_shift_edit_warning_dialog_negative_button">Discard</string>

    <string name="app_rating_prompt_title">Like this app?</string>
    <string name="app_rating_prompt_message">Show us some love by rating the app in the Play store!</string>
    <string name="app_rating_prompt_positive_button">Rate now</string>
    <string name="app_rating_prompt_negative_button">No thanks</string>

    <string name="statistics_label_shifts">Shifts</string>
    <string name="statistics_label_earnings">Earnings</string>
    <string name="statistics_label_hours">Hours</string>
    <string name="statistics_label_total">Total:</string>
    <string name="statistics_label_avg">Avg:</string>
    <string name="statistics_label_shift_count">Number of shifts</string>
    <string name="statistics_label_highest_earning_shift">Most valuable shift</string>
    <string name="statistics_label_lowest_earning_shift">Least valuable shift</string>
    <string name="statistics_label_average_earnings_per_shift">Avg wage/shift</string>
    <string name="statistics_label_average_earnings_per_day">Avg wage/day</string>
    <string name="statistics_label_average_hours_per_day">Avg hours/day</string>
    <string name="statistics_label_average_hours_per_shift">Avg hours/shift</string>
    <string name="statistics_label_longest_shift">Longest shift</string>
    <string name="statistics_label_shortest_shift">Shortest shift</string>
    <string name="create_new_shift">Create New Shift</string>

    <string name="upgrade_app_prompt_action">View full version</string>
    <string name="upgrade_app_prompt_title">Feature Unavailable</string>
    <string name="upgrade_app_prompt_nav_drawer_title">Like using ShiftTracker?</string>
    <string name="upgrade_app_prompt_nav_drawer_message">Click here to upgrade now!</string>
    <string name="upgrade_app_prompt_statistics_date">View statistics for shifts within any date range.\n\nThis and other great features are available in the full version of the app!</string>
    <string name="upgrade_app_prompt_edit_reminder">Get alerted about upcoming shifts to remind you to clear your schedule.\n\nThis and other great features are available in the full version of the app!</string>
    <string name="upgrade_app_prompt_export_shifts">Export your data for easy analysis and backup.\n\nThis and other great features are available in the full version of the app!</string>
    <string name="exporting_data">Exporting data...</string>
    <string name="export_shift_email_subject">Shift Tracker data export</string>
    <string name="dashclock_extension_title">Next shift</string>
    <string name="this_week">This week</string>
    <string name="shift_collection_title_template">Total %1$s / %2$s</string>
    <string name="shift_collection_title_no_shift">No shifts worked</string>

    <string-array name="month_header_titles">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="days_of_week_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="default_unpaid_break_labels">
        <item>No break</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>90 minutes</item>
    </string-array>

    <string-array name="default_unpaid_break_values">
        <item>0</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>2700000</item>
        <item>3600000</item>
        <item>5400000</item>
    </string-array>

</resources>
